修改本地配置 & 刷新管理用户的更新时间 Signed-off-by: zhangyanlei <549545303@qq.com>

--- a/src/main/resources/templates/console/index.html
+++ b/src/main/resources/templates/console/index.html
@@ -99,7 +99,7 @@
         <div class="pull-right hidden-xs">
             <b>Version</b> 2.0.0
         </div>
-        <strong>Copyright &copy; 2016-2018 <a href="http://www.geekcattle.com">放牛极客</a>.</strong> All rights reserved.
+        <strong>Copyright &copy; 2019-2022 <a href="https://github.com/zhangylz/Geek-Framework">yanleizhang</a>.</strong> All rights reserved.
     </footer>
 </div>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
